kustomize/base-openshift/shard/service-mesh/jwt-request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-rh-sso
  namespace: istio-system
spec:
  jwtRules:
    - issuer: 'https://sso.redhat.com/auth/realms/redhat-external'
      jwksUri: >-
        https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/certs
