kustomize/base-openshift/shard/service-mesh/virtual-service-kafka-broker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: broker-virtual-service
#  Due to https://github.com/kubernetes-sigs/kustomize/issues/880 we have to override it in overlays/<ENV>/kustomization.yaml
#  namespace: knative-eventing
spec:
  gateways:
    - broker-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kafka-broker-ingress
            port:
              number: 80
